--- a/Todo.Infrastructure/Todo.Infrastructure.csproj
+++ b/Todo.Infrastructure/Todo.Infrastructure.csproj
@@ -18,5 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
   </ItemGroup>
+ <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 
 </Project>
