feat(startup): add ASP.NET Web API project with enabling openAi, layer references, and service registration
Created a new startup project using the ASP.NET Web API template to enable Swagger UI for API UserInterface.
Added project references for the core, infrastructure, and UI layers.
Registered necessary services and dependencies in the Startup class.

--- a/ToDo.WebAPI/todo.WebAPI.csproj
+++ b/ToDo.WebAPI/todo.WebAPI.csproj
@@ -7,17 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
-=======
->>>>>>> d1de45d (refactor(controller): update controller methods to integrate request and response DTOs)
-=======
->>>>>>> 7f01e22 (feat(ui): add CRUD APIs with constructor-based dependency injection)
-=======
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
->>>>>>> 5783ca4 (feat(auth): Add jwt based authentication)
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,6 +17,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Todo.Infrastructure\Todo.Infrastructure.csproj" />
     <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
+    <ProjectReference Include="..\TodoApp.UI\TodoApp.UI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
