--- a/Todo.Infrastructure/Todo.Infrastructure.csproj
+++ b/Todo.Infrastructure/Todo.Infrastructure.csproj
@@ -18,6 +18,13 @@
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
   </ItemGroup>
+
+ <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+
+
  <ItemGroup>
     <Folder Include="Services\" />
   </ItemGroup>
