--- a/TodoApp.Core/TodoApp.Core.csproj
+++ b/TodoApp.Core/TodoApp.Core.csproj
@@ -9,9 +9,13 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
 
+
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
 
 </ItemGroup>
+
+  </ItemGroup>
+
 
 </Project>
