--- a/ToDo.WebAPI/appsettings.json
+++ b/ToDo.WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "VeryVerySecureKey12345678910111211314151617",
+    "Issuer": "todo-app",
+    "Audience": "todo-client"
+  },
 
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=DESKTOP-ABAT3M5;Database=ToDoApp;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=false;"
