--- a/ToDo.WebAPI/appsettings.json
+++ b/ToDo.WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "VeryVerySecureKey12345678910111211314151617",
+    "Issuer": "todo-app",
+    "Audience": "todo-client"
+  },
 
 
   "Jwt": {
