--- a/Todo.Infrastructure/Todo.Infrastructure.csproj
+++ b/Todo.Infrastructure/Todo.Infrastructure.csproj
@@ -1,5 +1,4 @@
-
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,41 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
-  </ItemGroup>
-
-
-
-
- <ItemGroup>
-
-  <ItemGroup>
-
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-
-
- <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-
-<ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-</Project>
-
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
@@ -61,11 +25,4 @@
     <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
   </ItemGroup>
 
-
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-
-</Project>
 </Project>
